# micromusic

./: .gitignore  Cargo.toml  README.md  build_xcode.sh
src/: album_data.rs  build.rs  engine.rs  ffi.c  get_song_info.jxa  hit_test.c  hittest.c  main.rs  osascript_requests.rs  player_data.rs  song_info.rs
src/engine/: mod.rs  mouse.rs
src/osascript_requests/: clear_played_tracks.jxa  get_album_data.jxa  get_player_data.jxa  get_player_data_sonoma.jxa  make_dj_playlist.jxa  mod.rs  queue_album.jxa  remove_dj_playlist.jxa
src/player_info/: get_player_data.jxa  mod.rs
src/song_info/: mod.rs
xcode/: .rustc_info.json  Info.plist  build_xcode.sh
xcode/libs/: libSDL2-2.0.0.dylib  libSDL2_image-2.0.0.dylib  libaom.3.6.1.dylib  libaom.3.8.0.dylib  libaom.3.9.0.dylib  libavif.15.0.1.dylib  libavif.16.0.3.dylib  libavif.16.0.4.dylib  libbrotlicommon.1.0.9.dylib  libbrotlicommon.1.1.0.dylib  libbrotlidec.1.0.9.dylib  libbrotlidec.1.1.0.dylib  libbrotlienc.1.0.9.dylib  libbrotlienc.1.1.0.dylib  libhwy.1.0.4.dylib  libhwy.1.0.7.dylib  libhwy.1.2.0.dylib  libjpeg.8.2.2.dylib  libjpeg.8.3.2.dylib  libjxl.0.10.2.dylib  libjxl.0.8.1.dylib  libjxl.0.9.1.dylib  libjxl_cms.0.10.2.dylib  libjxl_cms.0.9.1.dylib  liblcms2.2.dylib  liblzma.5.dylib  libpng16.16.dylib  libsharpyuv.0.0.0.dylib  libsharpyuv.0.0.1.dylib  libsharpyuv.0.1.0.dylib  libtiff.6.dylib  libvmaf.1.dylib  libvmaf.3.dylib  libwebp.7.1.6.dylib  libwebp.7.1.8.dylib  libwebp.7.1.9.dylib  libwebpdemux.2.0.14.dylib  libwebpdemux.2.0.15.dylib  libzstd.1.5.5.dylib  libzstd.1.5.6.dylib
(+5 files in other folders)
