[package]
name = "micromusic"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
osascript = "0.3.0"
sdl2-unifont = "1.0.2"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
rust-embed = "6.4.0"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image"]
